# Library-for-working-with-Automata

./: CHANGELOG.md  projectDFA.cabal
AutomataLibrary/DFA/: DFA.hi  DFA.hs
AutomataLibrary/Misc/: Data_types.hi  Data_types.hs  Helper_functions.hi  Helper_functions.hs
AutomataLibrary/NFA/: NFA.hi  NFA.hs
AutomataLibrary/PDA/: PDA.hi  PDA.hs
AutomataLibrary/Regex/: Regex.hi  Regex.hs
AutomataLibrary/TM/: TM.hi  TM.hs
Tests/: DFA_tests.hi  DFA_tests.hs  NFA_tests.hi  NFA_tests.hs  PDA_tests.hi  PDA_tests.hs  TM_tests.hi  TM_tests.hs  run.cmd
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.4/: package.cache  projectDFA-0.1.0.0-inplace-automatalib.conf
project )/: DFA_Test.hi  DFA_Test.hs
source/: Source.hs
